DevTools: pass parsed message as unique_ptr instead of raw pointer

This will allow devtools_session to own parsed message and
bind it as a part of a callback.

R=dgozman

Bug: 817413
Change-Id: I48dc7a12741902603e22233cdd26b6bb97ecf453
Reviewed-on: https://chromium-review.googlesource.com/1145954
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577328}
Former-commit-id: decbccdbfc17bd75df40a9c47b24dd80dfea90c0